--- a/apps/expo/app.json
+++ b/apps/expo/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "solito-blank",
-    "slug": "solito-blank",
+    "name": "solito-eas",
+    "slug": "solito-eas",
     "version": "1.0.0",
     "sdkVersion": "44.0.0",
-    "scheme": "solito-blank",
+    "scheme": "solito-eas",
     "platforms": ["ios", "android"],
     "ios": {
-      "bundleIdentifier": "com.solito.blank"
+      "bundleIdentifier": "com.nandorojo.solito-tester"
     },
     "assetBundlePatterns": ["**/*"]
   }
