--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -4,6 +4,7 @@
     "expo": "^44.0.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
