--- a/apps/expo/app.json
+++ b/apps/expo/app.json
@@ -7,6 +7,9 @@
     "scheme": "solito-eas",
     "platforms": ["ios"],
     "runtimeVersion": "1",
+    "updates": {
+      "url": "https://u.expo.dev/7e5b02b4-05a1-4c41-b65f-c9e09f685206"
+    },
     "ios": {
       "bundleIdentifier": "com.nandorojo.solito-tester"
     },
